--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class="lead fw-normal text-muted mb-5">XARIIA is an online platform that transforms your personality traits and design preferences into Unique pattern designs for clothing sold on the website.</p>
+                            <p class="lead fw-normal text-muted mb-5">XARIIA is an online platform that transforms your personality traits and design preferences into unique and distinctive pattern designs for clothing sold on the website.
+                            </p>
                             <!-- <p class="lead fw-normal text-muted mb-5">             
                                 Our mission is to revolutionize custom fashion.<br>
                                 We accomplish this by:<br>
