--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 		
 			<meta name="HandheldFriendly" content="True">
-			<meta name="MobileOptimized" content="390"> 
+			<meta name="MobileOptimized" content="844"> 
 
 			
 			
@@ -105,9 +105,9 @@
 			
 
 		<style>
-			body { width: 390px; height: 844px; }
-			.landscape, .landscape .prx-page { min-height: 390px; }
-			.portrait, .portrait .prx-page { min-height: 844px; }
+			body { width: 844px; height: 390px; }
+			.landscape, .landscape .prx-page { min-height: 844px; }
+			.portrait, .portrait .prx-page { min-height: 390px; }
 		</style>
 
 		<script type="text/javascript">
@@ -128,7 +128,7 @@
 			prx.device_library = 'ios9';
 			prx.devices[prx.device] = {
 				name: prx.device
-				,defaultOrientation: 'portrait'
+				,defaultOrientation: 'landscape'
 				,portrait_applies: 1 //new
 				,portrait: [390,844]
 				,landscape_applies: 1 //new
@@ -167,7 +167,7 @@
 			prx.projectsettings.initialpageid = -1;
 			
 			
-			prx.projectsettings.flashactions = 1;
+			prx.projectsettings.flashactions = 0;
 			prx.projectsettings.gatrackingcode = '';
 
 			prx.export2html = '1' == true;
@@ -179,12 +179,12 @@
 			var sLinkedAssets = [];
 			
 
-			prx.csrf_token = '7606065FE954A71E38BD7CB39BFB55AD24385D9FDAE69B4B2DD5221948F583A6';
+			prx.csrf_token = '5508D0FC5BFDD4FF568F2E7D706F6E067B172AA62099E9F19CAF31E225C9B31A';
 
             
 
             
-                            prx.assetsAccessToken = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJkIjp7InVpZCI6Ii0xIiwicHJvamVjdF9pZCI6ImRiMDQ3YzEwLTFhNmQtNDQzZS04OTQzLWI3MDI3MzFlNjY3NSJ9LCJ2IjowLCJleHAiOjE2NTk2MTIzMzEsImlhdCI6MTY1OTQzMjMzMX0.xHdzE7bi9me8QRiRzG2tgFSRn117PGB6Pe4f-mkI7U8";
+                            prx.assetsAccessToken = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJkIjp7InVpZCI6Ii0xIiwicHJvamVjdF9pZCI6ImRiMDQ3YzEwLTFhNmQtNDQzZS04OTQzLWI3MDI3MzFlNjY3NSJ9LCJ2IjowLCJleHAiOjE2NTk2MTY2MzAsImlhdCI6MTY1OTQzNjYzMH0.ihdzlGe9oOdndRy33NRHttgDcJuRyZ7c7SHkOjVG9zg";
 
 			prx.iniPlayer.iniPreLoad();
 
