--- a/index.html
+++ b/index.html
@@ -400,18 +400,14 @@
 
         <section class="bg-light">
             <div class="container px-5">
-                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-6">
-                        <h2 class="display-4 lh-1 mb-4">Try Out Our Prototype</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
-                        </p>                    
-                    </div>
-                    <div class="col-sm-10 col-md-8 col-lg-6">
-                        <iframe id="pio-playerframe" src="prototype.html" scrolling="NO" style="width: 800px; height: 700px;" webkitAllowFullScreen mozallowfullscreen allowFullScreen allowvr allow="autoplay"></iframe>
-                    </div>
+                <div class="row align-items-center justify-content-center">
+                    <h2 class="display-4 lh-1 mb-4">Try Our Prototype</h2>
+                    <iframe id="pio-playerframe" src="prototype.html" scrolling="NO" style="width:844px; height:600px;" webkitAllowFullScreen mozallowfullscreen allowFullScreen allowvr allow="autoplay"></iframe>
                 </div>
             </div>
         </section>
+
+      
            
         <!-- Call to action section-->
         <!-- <section class="cta">
