--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -122,7 +122,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5 logomid">
-                <a href="index.html" class="navbar-brand fw-bold"><img src="assets/xariia.png" alt="XARIIA logo" class="img-fluid"></a>
+                <a href="Home.html" class="navbar-brand fw-bold"><img src="assets/xariia.png" alt="XARIIA logo" class="img-fluid"></a>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                     <span class="d-flex align-items-center">
                         <span class="small">Subscribe</span>
