--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-5 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class="lead fw-normal text-muted mb-5">XARIIA is an online platform that transforms your personality traits and design preferences into unique and distinctive pattern designs for clothing sold on the website.
+                            <p class="lead fw-normal text-muted mb-5">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern designs for clothing sold on the website.
                             </p>
                             <!-- <p class="lead fw-normal text-muted mb-5">             
                                 Our mission is to revolutionize custom fashion.<br>
@@ -269,7 +269,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/cloths.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Product Selector</h3>
-                                        <p class="text-muted mb-0">We offer a diverse selection of Digital & Phygital NFT fashion products you can choose from, for the custom print design to be applied to.
+                                        <p class="text-muted mb-0">We offer a diverse selection of digital & phygital NFT fashion products you can choose from, for the custom print design to be applied to.
                                         </p>
                                     </div>
                                 </div>
@@ -299,8 +299,7 @@
                                         <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">3D Mockup Generator</h3>
                                         <p class="text-muted mb-0">
-                                            A 3D product mockup generator that enables you to see the generated pattern design applied to the product of your choice in real-time.
-                                        </p>
+                                            A 3D product mockup generator that enables you to see the generated pattern design applied to the chosen product in real-time.                                        </p>
                                     </div>
                                 </div>
                             </div>
