new updates and fixes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="XARIIA" />
         <meta property="og:url" content="https://xariia.com/" />
-        <meta property="og:description" content="XARIIA is the online platform that transforms your personality traits and design preferences into Unique custom pattern designs for clothing sold on the website.">
+        <meta property="og:description" content="XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern designs for clothing sold on the website.">
         <meta name="keywords" content="pattern me, XARIIA, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
         <meta property="og:image" content="XARIIAfb.png"><meta property="og:image:type" content="image/png" />
         <meta property="og:image:alt" content="XARIIA Logo" />
@@ -138,9 +138,9 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-5 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class="lead fw-normal text-muted mb-5">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern designs for clothing sold on the website.
+                            <p class="lead fw-bold text-muted mb-5">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern designs for clothing sold on the website.
                             </p>
-                            <!-- <p class="lead fw-normal text-muted mb-5">             
+                            <!-- <p class="lead fw-bold text-muted mb-5">             
                                 Our mission is to revolutionize custom fashion.<br>
                                 We accomplish this by:<br>
                                 - Using AI to automate the print design process. <br>
@@ -162,7 +162,7 @@
                                               </div>
                                           </form>
                                         </div>
-                                        <p class="subscrib">Subscribe now to be kept up to date on our upcoming launch.</p>
+                                        <p class="fw-bold subscrib">Subscribe now to be kept up to date on our upcoming launch.</p>
                                     <!--End mc_embed_signup-->
                                 </div>
                             </div>
@@ -229,8 +229,8 @@
                     <div class="col-12 col-lg-8">
                         <h2 class="display-5 lh-1 mb-4">Our mission is to revolutionize custom fashion.
                         </h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
-                            <p class="lead fw-normal text-muted mb-5">             
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0">
+                            <p class="lead fw-bold text-muted mb-5">             
                                 We accomplish this by:<br>
                                 - Using AI to automate the print design process. <br>
                                 - Making high-fashion accessible and affordable to anyone. <br>
@@ -248,7 +248,15 @@
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-8">
-                        <div class="h2 fs-1  mb-4">"Bespoke Fashion Designed  By AI  For Both The Physical World And The Metaverse!"
+                        <div class="lead mb-4">
+                            <h2 class="display-5 lh-1 mb-4">Mission & Vision</h2>
+                            <p class="fw-bold">Our mission is to revolutionize custom fashion.<br>
+                                We accomplish this by:<br>
+                                - Using AI to automate and streamline the design process, thus simplifying it.<br>
+                                - Making high-fashion accessible and affordable for everyone worldwide.<br>
+                                - Selling a unique and distinct design while keeping the process of obtaining a piece simple and user-friendly.<br>
+                                - By being a pioneer in the digital and physical fashion spaces by providing custom designs for both, thus connecting them.<br>
+                                - Selling digital clothing that’s 96% more sustianible than Physical clothing and doing on-demand production for our physical clothes.<br></p>
                         </div>
                         <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" />
                     </div>
@@ -269,7 +277,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/cloths.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Product Selector</h3>
-                                        <p class="text-muted mb-0">We offer a diverse selection of digital & phygital NFT fashion products you can choose from, for the custom print design to be applied to.
+                                        <p class="fw-bold text-muted mb-0">We offer a diverse selection of digital & phygital NFT fashion products you can choose from, for the custom print design to be applied to.
                                         </p>
                                     </div>
                                 </div>
@@ -279,7 +287,7 @@
                                         <img class="iconwidth" src="assets/user-interface.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Design Preference Selector
                                         </h3>
-                                        <p class="text-muted mb-0">A user interface that makes collecting your design preferences as simple as possible.
+                                        <p class="fw-bold text-muted mb-0">A user interface that makes collecting your design preferences as simple as possible.
                                         </p>
                                     </div>
                                 </div>
@@ -290,7 +298,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/ai.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Creative AI </h3>
-                                        <p class="text-muted mb-0">
+                                        <p class="fw-bold text-muted mb-0">
                                             A generative AI that creates unique and distinctive designs for your chosen product in real-time based on your preferences.                                    </div>
                                     </div>
                                 <div class="col-md-6">
@@ -298,7 +306,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">3D Mockup Generator</h3>
-                                        <p class="text-muted mb-0">
+                                        <p class="fw-bold text-muted mb-0">
                                             A 3D product mockup generator that enables you to see the generated pattern design applied to the chosen product in real-time.                                        </p>
                                     </div>
                                 </div>
@@ -339,7 +347,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4"> 1. You Select A Product</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0">
                             Our platform will provide you with a wide variety of digital and phygital clothes (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom design to go on.                        </p>                   
                      </div>
                     <div class="col-xs-10 col-md-6 col-lg-4">
@@ -353,7 +361,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4">2. You Select Your Design Preferences</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0">
                             Following your selection of a product, the platform will direct you to a page where you can customize your design by selecting preferences from the user interface. Our AI will create a design for you based on your preferences.                        </p>
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
@@ -367,7 +375,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4">3. You See A Mockup Of the Product</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0">
                             The product will have the AI-generated design applied to it so that you can view it in 3D and augmented reality before you buy it.<br>
                             The design will be instantly minted to the blockchain and saved there, enabling you to use your distinctive design on numerous products in the future.
                         </p>                    
@@ -383,7 +391,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4">4. Purchase & Use</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0">
                             The purchased product can be used in the following three ways:<br>
                             - Physically worn in real life as we will produce the product as needed based on your size and generated design.<br>
                             - Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications.<br>
@@ -442,7 +450,7 @@
                                               </div>
                                           </form>
                                         </div>
-                                        <p class="subscrib">Subscribe now to be kept up to date on our upcoming launch.</p>
+                                        <p class="fw-bold subscrib">Subscribe now to be kept up to date on our upcoming launch.</p>
                                     <!--End mc_embed_signup-->
                                 </div>
                             </div>
