--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-8">
-                        <div class="lead mb-4">
+                        <div class="textblack lead mb-4">
                             <h2 class="display-5 lh-1 mb-4">Mission & Vision</h2>
                             <p class="fw-bold">Our mission is to revolutionize custom fashion.<br>
                                 We accomplish this by:<br>
@@ -476,9 +476,9 @@
             </div>    
         </section>
         <!-- Footer-->
-        <footer class="bg-black text-center py-5">
+        <footer class="fw-bold bg-black text-center py-5">
             <div class="container px-5">
-                <div class="text-white-50 small">
+                <div class=" text-white-50 small">
                     <div class="mb-2">&copy; XARIIA 2022 All Rights Reserved.</div>
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <!-- <span class="mx-1">&middot;</span>
